# RAG-Production-Grade-RAG-Pipeline-for-Research-Paper-QA-Summarization

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
backend/: __init__.py
backend/api/: main.py
backend/api/routes/: health.py  ingest.py  query.py
backend/core/: __init__.py  config.py  exceptions.py
backend/embeddings/: __init__.py  encoder.py
backend/evaluation/: __init__.py  ragas_evaluator.py
backend/generation/: __init__.py  llm_client.py  prompt_builder.py  quality_checker.py
backend/ingestion/: __init__.py  arxiv_fetcher.py  chunker.py  document_loader.py
backend/monitoring/: __init__.py  langsmith_tracker.py  prometheus_metrics.py
backend/retrieval/: __init__.py  bm25_index.py  hybrid_retriever.py  reranker.py  vector_store.py
backend/tests/: __init__.py
backend/tests/unit/: test_bm25.py  test_chunker.py  test_prompt_builder.py  test_quality_checker.py
docs/: architecture.md
frontend/: streamlit_app.py
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infrastructure/grafana/dashboards/: dashboards.yml  scholarrag_dashboard.json
infrastructure/prometheus/: prometheus.yml
scripts/: ingest_papers.py  run_evaluation.py
